After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757451 - doc: fix g_task_attach_source() example
doc: fix g_task_attach_source() example
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-11-02 00:40 UTC by Daiki Ueno
Modified: 2015-11-02 02:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
doc: fix g_task_attach_source() example (1.37 KB, patch)
2015-11-02 00:40 UTC, Daiki Ueno
committed Details | Review

Description Daiki Ueno 2015-11-02 00:40:46 UTC
The 3rd argument of the function is not a GCallback, but a GSourceFunc.
Comment 1 Daiki Ueno 2015-11-02 00:40:49 UTC
Created attachment 314601 [details] [review]
doc: fix g_task_attach_source() example
Comment 2 Colin Walters 2015-11-02 01:56:39 UTC
Review of attachment 314601 [details] [review]:

LGTM.
Comment 3 Daiki Ueno 2015-11-02 02:14:40 UTC
Attachment 314601 [details] pushed as 863bffd - doc: fix g_task_attach_source() example